Change Napkin deafult LAF Fonts (only for JTextArea and JTextField)
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@1792 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/todo.txt
+++ b/todo.txt
@@ -5,6 +5,7 @@
  - Fix - Single click on tray icon must call EXACTLY the same code as TrayIconMenu > 
    Open. Currently, clicking on the TrayIcon is not bringing the dashboard to the foreground when locked.
  	
+ - [DONE, (napkin "bug")] Fix - Font used in the "Notes" text field sucks.
  - [DONE] Fix - Make snapp windows collapse and expand faster. I am yawning =)
  - [DONE] Fix - Stop using exclamation marks (!) in the menus (Open!, Lock!)
  - [DONE] Fix - Rename menu label "Exit..." to "Exit"
@@ -13,7 +14,6 @@
 
 [Napkin "bugs"] (need change de napkin laf to fix this)
  - Fix - Increase snapp collapse icon ">>" contrast. I cannot see it properly. (i will fix the JXTaskPaneUI)
- - Fix - Font used in the "Notes" text field sucks. (i will change the JTextArea font)
  
  - Refactoring wheel.io.ui.Action to support Signals
  - GUI Development in General
