--- a/todo.txt
+++ b/todo.txt
@@ -2,7 +2,7 @@
 	- Fix - Menu stops working after dashboard is locked on win XP.
 	- Fix - Single click on tray icon must call EXACTLY the same code as TrayIconMenu > Open. Currently, clicking on the TrayIcon is not bringing the dashboard to the foreground when locked.
 	- Fix - The animated collapse is still slow. Let me show you what I mean.
-	- Fix - Use a font without serif such as arial in the text field.
+	- [DONE] Fix - Use a font without serif such as arial in the text field.
 
 	- [Napkin "bugs"] (need change de napkin laf to fix this)
    		- Fix - Increase snapp collapse icon ">>" contrast. I cannot see it properly. (i will fix the JXTaskPaneUI)
