--- a/todo.txt
+++ b/todo.txt
@@ -1,23 +1,19 @@
 ﻿Sandro
-	- Fix - Menu stops working after dashboard is locked on win XP.
-	- Fix - Single click on tray icon must call EXACTLY the same code as TrayIconMenu > Open. Currently, clicking on the TrayIcon is not bringing the dashboard to the foreground when locked.
-	  (I'm using the same action, is the same action instance. The bug can be a focus problem, when we click in Tray the focus don't change. I'm looking for a fix.)	
-	
-	  [Working] - Creating a SneerInternalFrame to fix and provide the window actions.
-	- Fix - The animated collapse is still slow. Let me show you what I mean.
-	- Fix - Increase snapp collapse icon ">>" contrast. I cannot see it properly.
 	- Internal Window Actions (expand brick, brick menu and remove brick, like google desktop).
 		
+	- [DONE] - Increase snapp collapse icon ">>" contrast. I cannot see it properly.
 	- [DONE] Fix - Use a font without serif such as arial in the text field.
+	- [DONE] Fix - Menu stops working after dashboard is locked on win XP.
+	- [DONE] Fix - Single click on tray icon must call EXACTLY the same code as TrayIconMenu > Open. Currently, clicking on the TrayIcon is not bringing the dashboard to the foreground when locked.
 
 	- Tray Icon - Ask Petra for a 16x16 icon to put there. Black on white. No transparency.
 	- Refactoring wheel.io.ui.Action to support Signals
 	- Layout Support for Internal Windows (Size, Resize and Position).
+	- Implement animated collapse (JInternalFrame).
 	
 	=================================================== RELEASE
 	- Resizeable JWindow, instead of switching JFrame <-> JWindow.
 	- Add Tab/Window Support
-
 
 ﻿Leandro
 	- check file locks on windows (FileUtils.cleanDirectory() "unable to delete file")
