--- a/todo.txt
+++ b/todo.txt
@@ -1,15 +1,16 @@
 ﻿Sandro
-	- Internal Window Actions (expand brick, brick menu and remove brick, like google desktop).
-		
+	- Create a first functional Snapp.		
+	- Internal Window Actions (expand brick, brick menu and remove brick, like google desktop).		
+	- Tray Icon - Ask Petra for a 16x16 icon to put there. Black on white. No transparency.
+	- Refactoring wheel.io.ui.Action to support Signals
+	- JScrollPane for Snapps.
+	- Layout Support for Internal Windows (Size, Resize and Position).
+	- Implement animated collapse (JInternalFrame).
+
 	- [DONE] - Increase snapp collapse icon ">>" contrast. I cannot see it properly.
 	- [DONE] Fix - Use a font without serif such as arial in the text field.
 	- [DONE] Fix - Menu stops working after dashboard is locked on win XP.
 	- [DONE] Fix - Single click on tray icon must call EXACTLY the same code as TrayIconMenu > Open. Currently, clicking on the TrayIcon is not bringing the dashboard to the foreground when locked.
-
-	- Tray Icon - Ask Petra for a 16x16 icon to put there. Black on white. No transparency.
-	- Refactoring wheel.io.ui.Action to support Signals
-	- Layout Support for Internal Windows (Size, Resize and Position).
-	- Implement animated collapse (JInternalFrame).
 	
 	=================================================== RELEASE
 	- Resizeable JWindow, instead of switching JFrame <-> JWindow.
